# Main.py-for-deployment

./: README.md  dashboard_api.py  db.py  elevenlabs_api.py  employees.json  events.jsonl  main.py  pyproject.toml  requirements.txt  seen_ids.json  utils.py  what_agent.db
media/Boss/2025-10-13/: doc_20251013_121430.docx
media/Hafiz/2025-09-11/: doc_20250911_180841.csv
media/Hafiz/2025-09-13/: doc_20250913_134512.csv
reports/: 923070251847.json  923172611096.json  923212558027.json  923463248880.json
